hotelpage-section1 + hotelpage-section3

--- a/src/partials/hotel-page-section1.html
+++ b/src/partials/hotel-page-section1.html
@@ -1,137 +1,59 @@
-<section class="section-rooms">
-  <div class="container-rooms">
-    <div class="double-lux">
-      <div class="double-lux-group-one">
-        <div class="double-lux__text-part">
-          <h4 class="rooms__note">Amet minim mollit non</h4>
-          <h2 class="rooms__title">
-            MIMIHO
-          </h2>
-          <h3 class="rooms__name">
-            ДВОМІСНИЙ НОМЕР люкс
-          </h3>
-          <p class="rooms__description">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-            consequat duis enim velit
-            mollit. Exercitation veniam consequat sunt nostrud amet.
-          </p>
-        </div>
-        <!-- <div class="room__picture double-lux__picture"> -->
-        <img src="./img/section1-img/hotel-foto1.jpg" alt="двомісний номер" class="room__picture__double">
-        <!-- </div> -->
-      </div>
-      <div class="double-lux-group-second">
-        <div class="room__slider double-lux__slider">
-          <img class="room__slider-first" src="./img/section1-img/hotel-foto2.jpg" alt="двомісний номер">
-          <img class="room__slider-second" src="./img/section1-img/hotel-foto3.jpg" alt="двомісний номер">
-        </div>
-        <ul class="rooms__arrow double-lux__arrow">
-          <li>
-            <svg class="rooms__arrow-left" width="32" height="32">
-              <use href="./img/icons-sprite.svg#icon-left-arrow-slider">
-            </svg>
-          </li>
-          <li>
-            <svg width="32" height="32">
-              <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider">
-            </svg>
-          </li>
-        </ul>
-        <ul class="rooms__buttons">
-          <li><a href="./room.html"><button class="rooms__button rooms__button-first">Детальніше</button></a></li>
-          <li><button class="rooms__button">Переглянути ціни</button></li>
-        </ul>
-      </div>
-    </div>
-    <div class="triple-lux__sect">
-      <div class="triple-lux">
-        <div class="triple-lux-group-one">
-          <div class="triple-lux__text-part">
-            <h4 class="rooms__note triple-lux__note">Amet minim mollit non</h4>
-            <h2 class="rooms__title triple-lux__title">
-              MIMIHO
-            </h2>
-            <h3 class="rooms__name triple-lux__name">
-              ТРЬОХМІСНИЙ НОМЕР
-            </h3>
-            <p class="rooms__description triple-lux__description">
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
-              officia consequat duis enim
-              velit
-              mollit. Exercitation veniam consequat sunt nostrud amet.
-            </p>
-          </div>
-          <!-- <div class="room__picture triple-lux__pictire"> -->
-          <img src="./img/section1-img/hotel-foto1.jpg" alt="двомісний номер" class="room__picture__double">
-          <!-- </div> -->
-        </div>
-        <div class="triple-lux-group-second">
-          <div class="room__slider triple-lux__slider">
-            <img class="room__slider-first" src="./img/section1-img/hotel-foto2.jpg" alt="двомісний номер">
-            <img class="room__slider-second" src="./img/section1-img/hotel-foto3.jpg" alt="двомісний номер">
-          </div>
-          <ul class="rooms__arrow triple-lux__arrow">
-            <li>
-              <svg class="rooms__arrow-left" width="32" height="32">
-                <use href="./img/icons-sprite.svg#icon-left-arrow-slider">
-              </svg>
-            </li>
-            <li>
-              <svg width="32" height="32">
-                <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider">
-              </svg>
-            </li>
-          </ul>
-          <ul class="rooms__buttons">
-            <li><a href="./room.html"><button class="rooms__button rooms__button-first">Детальніше</button></a></li>
-            <li><a href=""><button class="rooms__button">Переглянути ціни</button></a></li>
-          </ul>
-        </div>
-      </div>
+<section class="hotelpage-section1">
+  <div class="container-hotelpage">
+    <div class="hotelpage-top-wrap">
+      <h2 class="hotel-pre-title">Amet minim mollit non</h2>
+      <h2 class="hotel-logo">MIMIHO</h2>
+
+      <h2 class="hotel-title">ДВОМІСНИЙ НОМЕР люкс</h2>
+      <p class="hotel-post-title">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+      </p>
+      <img
+        src="../img/section1-img/hotel-foto1.jpg"
+        alt="room"
+        class="hotel-foto1"
+        width="244"
+        height="322"
+      />
     </div>
 
-    <div class="double-room">
-      <div class="double-room-group-one">
-        <div class="double-room__text-part">
-          <h4 class="rooms__note">Amet minim mollit non</h4>
-          <h2 class="rooms__title">
-            MIMIHO
-          </h2>
-          <h3 class="rooms__name">
-            ДВОМІСНИЙ НОМЕР
-          </h3>
-          <p class="rooms__description">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
-            consequat duis enim
-            velit
-            mollit. Exercitation veniam consequat sunt nostrud amet.
-          </p>
-        </div>
-        <!-- <div class="room__picture double-room__picture"> -->
-        <img src="./img/section1-img/hotel-foto1.jpg" alt="двомісний номер" class="room__picture__double">
-        <!-- </div> -->
+    <div class="hotelpage-bottom-wrap">
+      <ul class="hotelpage-img-list">
+        <li class="hotelpage-img-item">
+          <img
+            src="../img/section1-img/hotel-foto2.jpg"
+            alt=""
+            class="hotel-foto2"
+            width="194" height="194"
+          />
+        </li>
+        <li class="hotelpage-img-item">
+          <img
+            src="../img/section1-img/hotel-foto3.jpg"
+            alt=""
+            class="hotel-foto3"
+            width="194" height="194"
+          />
+        </li>
+      </ul>
+      <div class="hotelpage-btn-group">
+        <button type="button" class="hotelpage-btn">Детальніше</button>
+        <button type="button" class="hotelpage-btn">Переглянути ціни</button>
       </div>
-      <div class="double-room-group-second">
-        <div class="room__slider double-room__slider">
-          <img class="room__slider-first" src="./img/section1-img/hotel-foto2.jpg" alt="двомісний номер">
-          <img class="room__slider-second" src="./img/section1-img/hotel-foto3.jpg" alt="двомісний номер">
-        </div>
-        <ul class="rooms__arrow double-room__arrow">
-          <li>
-            <svg class="rooms__arrow-left" width="32" height="32">
-              <use href="./img/icons-sprite.svg#icon-left-arrow-slider">
-            </svg>
-          </li>
-          <li>
-            <svg width="32" height="32">
-              <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider">
-            </svg>
-          </li>
-        </ul>
-        <ul class="rooms__buttons">
-          <li><a href="./room.html"><button class="rooms__button rooms__button-first">Детальніше</button></a></li>
-          <li><button class="rooms__button">Переглянути ціни</button></li>
-        </ul>
+
+      <div class="hotelpage-arrows">
+        <button type="button" class="hotelpage-sliger-btn">
+          <svg class="hotelpage-arrow-icon" width="32" height="32">
+            <use href="../img/icons-sprite.svg#icon-left-arrow-slider"></use>
+          </svg>
+        </button>
+        <button type="button" class="hotelpage-sliger-btn">
+          <svg class="hotelpage-arrow-icon" width="32" height="32">
+            <use href="../img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
+          </svg>
+        </button>
       </div>
     </div>
   </div>
