--- a/src/partials/hotel-page-section1.html
+++ b/src/partials/hotel-page-section1.html
@@ -35,7 +35,7 @@
           <img
             srcset="./img/section1-img/hotel-foto3@2x.jpg 2x"
             src="./img/section1-img/hotel-foto3.jpg"
-            alt="cup of coffe on table"
+            alt="cup of coffee on table"
             class="hotel-foto3"
             width="194" height="194"
           />
