--- a/src/partials/hotel-page-section3.html
+++ b/src/partials/hotel-page-section3.html
@@ -11,7 +11,8 @@
           veniam consequat sunt nostrud amet.
         </p>
         <img
-          src="../img/section1-img/hotel-foto1.jpg"
+          srcset="./img/section1-img/hotel-foto1@2x.jpg 2x"
+          src="./img/section1-img/hotel-foto1.jpg"
           alt="room"
           class="hotel-foto1"
           width="244"
@@ -23,16 +24,18 @@
         <ul class="hotelpage-img-list">
           <li class="hotelpage-img-item">
             <img
-              src="../img/section1-img/hotel-foto2.jpg"
-              alt=""
+              srcset="./img/section1-img/hotel-foto2@2x.jpg 2x"
+              src="./img/section1-img/hotel-foto2.jpg"
+              alt="wash basin"
               class="hotel-foto2"
               width="194" height="194"
             />
           </li>
           <li class="hotelpage-img-item">
             <img
-              src="../img/section1-img/hotel-foto3.jpg"
-              alt=""
+              srcset="./img/section1-img/hotel-foto3@2x.jpg"
+              src="./img/section1-img/hotel-foto3.jpg"
+              alt="cup of coffee on table"
               class="hotel-foto3"
               width="194" height="194"
             />
@@ -46,12 +49,12 @@
         <div class="hotelpage-arrows">
           <button type="button" class="hotelpage-sliger-btn">
             <svg class="hotelpage-arrow-icon" width="32" height="32">
-              <use href="../img/icons-sprite.svg#icon-left-arrow-slider"></use>
+              <use href="./img/icons-sprite.svg#icon-left-arrow-slider"></use>
             </svg>
           </button>
           <button type="button" class="hotelpage-sliger-btn">
             <svg class="hotelpage-arrow-icon" width="32" height="32">
-              <use href="../img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
+              <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
             </svg>
           </button>
         </div>
