--- a/src/partials/hotel-page-section1.html
+++ b/src/partials/hotel-page-section1.html
@@ -42,7 +42,9 @@
         </li>
       </ul>
       <div class="hotelpage-btn-group">
-        <button type="button" class="hotelpage-btn">Детальніше</button>
+        <form action="https://vitalik1788.github.io/teamProject-group14/room.html">
+        <button class="hotelpage-btn">Детальніше</button>
+        </form>
         <button type="button" class="hotelpage-btn">Переглянути ціни</button>
       </div>
 
