--- a/src/css/room-page-hero.css
+++ b/src/css/room-page-hero.css
@@ -8,7 +8,7 @@
   background-image: url(../img/add-foto-room/double-lux-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: center;
 }
 
 @media (min-device-pixel-ratio: 2),
@@ -241,7 +241,7 @@
     padding-top: 524px;
     padding-bottom: 48px;
 
-    background-image: url(../img/add-foto-room/new-foto-room1.jpg);
+    background-image: url(../img/add-foto-room/doublux-hero-bg.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
@@ -249,7 +249,7 @@
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .roompage-hero-section {
-      background-image: url(../img/add-foto-room/new-foto-room1@2x.jpg);
+      background-image: url(../img/add-foto-room/double-lux-hero-bg@2x.jpg);
     }
   }
 
