--- a/src/partials/hotel-page-section3.html
+++ b/src/partials/hotel-page-section3.html
@@ -45,7 +45,7 @@
           <form action="https://vitalik1788.github.io/teamProject-group14/room.html">
             <button class="hotelpage-btn">Детальніше</button>
           </form>  
-          <button type="button" class="hotelpage-btn">Переглянути ціни</button>
+          <button type="button" class="hotelpage-btn" data-price-open-third>Переглянути ціни</button>
         </div>
   
         <div class="hotelpage-arrows">
@@ -64,3 +64,59 @@
     </div>
   </section>
   
+  <!-- MODAL WINDOW ROOM PRICE -->
+
+  <div class="backdrop is-hidden" data-price-third>
+    <div class="tt-modal">
+  
+      <button type="button" class="modal-close" data-price-close-third>
+        <svg class="close-modal-icon" width="24" height="24">
+          <use href="./img/icons-sprite.svg#icon-cross-close-modal"></use>
+        </svg>
+      </button>
+  
+      <div class="tt-modal-title-wrap">
+        <h1 class="tt-modal-title">
+          ЦІНИ НА НОМЕР
+        </h1>
+      </div>
+  
+      <div class="tp-modal-title-wrap">
+        <p class="tp-modal-title">Двомісний люкс</p>
+      </div>
+  
+      <div class="tp-modal-title-price">
+        <p class="tp-modal-price">Категорія номеру</p>
+      </div>
+  
+      <form class="tt-modal-form">
+        <div class="tp-input-wrap">
+          <div class="tp-modal-input-field">
+            <select id="night" name="night" class="tt-modal-input">
+              <option value="1" class="value" selected>2</option>
+              <option value="2" class="value">3</option>
+              <option value="3" class="value">4</option>
+              <option value="4" class="value">5</option>
+            </select>
+            <label for="night" class="tt-input-label-title">
+              Кількість ночей
+            </label>
+          </div>
+          <div class="tp-modal-input-field">
+            <select id="price" name="tt-date" class="tt-modal-input">
+              <option value="today" class="value" selected>
+                1000
+              </option>
+            </select>
+            <label for="price" class="tt-input-label-title">
+              грн
+            </label>
+          </div>
+        </div>
+  
+        <button type="submit" class="tt-modal-button">
+          ЗАБРОНЮВАТИ НОМЕР
+        </button>
+      </form>
+    </div>
+  </div>
