--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -77,6 +77,7 @@
 .footer-soc-link {
   color: #f3c653;
 }
+
 .footer-soc-text {
   font-family: 'Montserrat';
   font-style: normal;
@@ -86,9 +87,16 @@
   letter-spacing: 0.02em;
   color: #f3c653;
 }
+
 .footer-soc-icon {
   fill: #f3c653;
 }
+
+.footer-soc-icon:hover,
+.fooret-soc-icon:focus {
+  fill:antiquewhite;
+}
+
 
 @media screen and (min-width: 280px) and (max-width: 1023px) {
   .footer-soc-text {
