--- a/src/css/modal-table.css
+++ b/src/css/modal-table.css
@@ -52,7 +52,7 @@ select {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scaleY(1);
-  max-width: 712px;
+  width: 100%;
   background: #FFFDEE;
   border-radius: 2px;
   transition: transform 300ms linear;
