--- a/src/css/hotel-page-setion2.css
+++ b/src/css/hotel-page-setion2.css
@@ -1,13 +1,15 @@
+.section-three-room img {
+  max-width: none;
+}
+
 .container-hotel-section2 {
+  position: relative;
+  width: 414px;
+
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  margin: 0 auto;
-}
-
-.section-three-room>.container {
-  max-width: 414px;
 }
 
 .section-three-room {
@@ -21,14 +23,13 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 1.05;
-  color: #B4B4B4;
+  color: #b4b4b4;
   text-align: right;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .title-three {
   font-family: 'Film P3', sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 1.08;
@@ -40,7 +41,6 @@
 
 .after-title-three-room {
   font-family: 'Times New Roman', sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.2;
@@ -51,15 +51,26 @@
 }
 
 .text-three-room {
+  position: relative;
+  left: 83px;
+
   width: 242px;
-  margin-left: 80px;
   margin-bottom: 32px;
-  font-family: "Montserrat", sans-serif;
+
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 12px;
   line-height: 1.25;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   color: #7a7a7a;
+}
+
+.container-one {
+  margin-bottom: 32px;
+}
+
+.div-pre-title {
+  margin-bottom: 32px;
 }
 
 .img-three-room {
@@ -67,16 +78,15 @@
   height: 322px;
   box-shadow: 2px 2px 60px 2px #00000040;
   border-radius: 2px;
-  margin-bottom: 32px;
 }
-
 
 .list-img-three-room {
   position: relative;
-  left: 130px;
+  left: 115px;
+
   display: flex;
   gap: 20px;
-  margin-bottom: 27px;
+  margin-bottom: 20px;
 }
 
 .item-three-room {
@@ -85,7 +95,6 @@
 }
 
 .img-item-three {
-
   width: 194px;
   height: 194px;
   box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
@@ -94,7 +103,7 @@
 
 .list-svg-three-room {
   display: flex;
-  gap: 33px;
+  gap: 32px;
   justify-content: right;
 }
 
@@ -107,57 +116,56 @@
   cursor: pointer;
 }
 
+.list-btn-three-room {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .three-room-btn {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.02em;
-  color: #F3C653;
+  color: #f3c653;
   cursor: pointer;
   background: #000000;
   border: 2px solid rgba(255, 253, 238, 1);
   border-radius: 25px;
-  width: 236px;
-  height: 48px;
+  min-width: 236px;
+  padding: 14px 37px;
   outline: none;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 16px;
-  margin-bottom: 0;
+  display: inline-block;
 }
 
 .three-room-btn:hover,
 .three-room-btn:focus {
   border: 2px solid rgba(243, 198, 83, 1);
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 /*-------------mobile------------*/
 
-@media screen and (min-widht:480px) {
-  .container {
-    max-width: 428px;
-    margin: 0 auto;
+@media screen and (max-width: 413px) {
+  .container-hotel-section2 {
+    width: 100%;
   }
-
 }
 
 /*------------tablet------------*/
 
+@media screen and (max-width: 1023px) {
+}
 
 @media screen and (min-width: 1024px) {
-  .container {
-    max-width: 960px;
-  }
-
-  .section-three-room>.container {
-    max-width: 960px;
+  .container-hotel-section2 {
+    width: 960px;
   }
 
   .section-three-room {
     padding-top: 66px;
+    padding-bottom: 40px;
   }
 
   .container-one {
@@ -168,20 +176,26 @@
     margin-bottom: 121px;
   }
 
-
   .img-three-room {
     position: absolute;
-    margin-bottom: 0px;
+    left: 65px;
+    top: -96px;
 
+    width: 400px;
+    height: 524px;
+    margin-bottom: 0px;
   }
 
   .pre-title-three-room {
     font-size: 32px;
     line-height: 1.2;
-    padding-bottom: 4px;
+    margin-bottom: 4px;
   }
 
   .title-three {
+    width: 202px;
+    margin-left: auto;
+
     font-size: 64px;
     line-height: 1.07;
     letter-spacing: 0.3em;
@@ -191,12 +205,15 @@
   .after-title-three-room {
     font-size: 30px;
     line-height: 1.03;
-    margin-right: 26px;
+    margin-bottom: 16px;
+    padding-right: 43px;
   }
 
   .text-three-room {
+    position: relative;
+    right: 20px;
+    left: 0;
     width: 400px;
-    margin-left: auto;
     font-size: 16px;
     line-height: 1.5;
     margin-bottom: 0;
@@ -206,7 +223,6 @@
     display: flex;
     flex-direction: row-reverse;
     gap: 266px;
-
   }
 
   .list-img-three-room {
@@ -214,7 +230,6 @@
     gap: 20px;
     margin-bottom: 27px;
     left: 0px;
-
   }
 
   .list-svg-three-room {
@@ -222,55 +237,50 @@
     gap: 33px;
     margin-bottom: 0px;
     justify-content: left;
-
   }
 }
 
 /*------------desktop------------*/
 
-
 @media screen and (min-width: 1280px) {
-  .container {
+  .container-hotel-section2 {
     width: 1140px;
-  }
-
-  .section-three-room>.container {
-    max-width: 1140px;
   }
 
   .section-three-room {
     padding-top: 72px;
   }
 
+
   .pre-title-three-room {
-    margin-right: 60px;
+    left: 72px;
   }
 
   .title-three {
     margin-bottom: 72px;
-    margin-right: 60px;
   }
 
   .after-title-three-room {
     font-size: 36px;
     line-height: 1.13;
-    margin-right: 70px;
+    padding-right: 0;
+    margin-bottom: 24px;
   }
 
-  .text-three-room {
-    margin-right: 120px;
-  }
+ 
 
   .img-three-room {
     position: absolute;
-    left: 160px;
+    left: 110px;
+
+    width: 460px;
+    height: 574px;
   }
 
   .list-img-three-room {
     margin-bottom: 27px;
-    margin-bottom: 47px;
+    margin-bottom: 40px;
     gap: 40px;
-
   }
 
   .container-one {
@@ -281,7 +291,6 @@
     display: flex;
     flex-direction: row-reverse;
     gap: 266px;
-
   }
 
   .img-item-three {
@@ -293,5 +302,3 @@
     margin-top: 40px;
   }
 }
-
-
