--- a/src/partials/hotel-page-section2.html
+++ b/src/partials/hotel-page-section2.html
@@ -9,8 +9,7 @@
           officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
       </div>
       <div class="div-after-title">
-        <img src="./img/section1-img/hotel-foto1.jpg
-        " alt="трьохмісний номер" width="400px" class="img-three-room">
+        <img src="./img/section1-img/hotel-foto1.jpg" alt="трьохмісний номер" width="400px" class="img-three-room">
       </div>
     </div>
     <div class="container-two">
