--- a/src/partials/hotel-page-section2.html
+++ b/src/partials/hotel-page-section2.html
@@ -9,16 +9,31 @@
           officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
       </div>
       <div class="div-after-title">
-        <img src="./img/section1-img/hotel-foto1.jpg" alt="трьохмісний номер" width="400px" class="img-three-room">
+        <img
+        srcset="./img/add-foto-room/newsection3-foto-1@2x.jpg 2x" 
+        src="./img/add-foto-room/newsection3-foto-1.jpg" 
+        alt="трьохмісний номер" 
+        width="400px" 
+        class="img-three-room">
       </div>
     </div>
     <div class="container-two">
       <div class="div-pre">
         <ul class="list-img-three-room list">
-          <li class="item-three-room-img"><img src="./img/section1-img/hotel-foto2.jpg" alt="ванна" width="194px"
-              class="img-item-three"></li>
-          <li class="item-three-room-img"><img src="./img/section1-img/hotel-foto3.jpg" alt="чашка біля вікна"
-              width="194px" class="img-item-three"></li>
+          <li class="item-three-room-img">
+            <img
+            srcset="./img/add-foto-room/newsection3-foto-2@2x.jpg 2x"
+            src="./img/add-foto-room/newsection3-foto-2.jpg" 
+            alt="гостинна кімната" 
+            width="194px"
+            class="img-item-three"></li>
+          <li class="item-three-room-img">
+            <img
+            srcset="./img/add-foto-room/newsection3-foto-3@2x.jpg 2x" 
+            src="./img/add-foto-room/newsection3-foto-3.jpg" 
+            alt="ванна кімната"
+            width="194px" 
+            class="img-item-three"></li>
         </ul>
         <ul class="list-svg-three-room list">
           <li class="item-svg-three-room">
