--- a/src/partials/hotel-page-section1.html
+++ b/src/partials/hotel-page-section1.html
@@ -43,7 +43,7 @@
       </ul>
       <div class="hotelpage-btn-group">
         <form action="https://vitalik1788.github.io/teamProject-group14/room.html">
-        <button class="hotelpage-btn">Детальніше</button>
+          <button class="hotelpage-btn">Детальніше</button>
         </form>
         <button type="button" class="hotelpage-btn" data-price-open-one>Переглянути ціни</button>
       </div>
@@ -82,7 +82,7 @@
     </div>
 
     <div class="tp-modal-title-wrap">
-      <p class="tp-modal-title">Двомісний люкс</p>
+      <p class="tp-modal-title">ДВОМІСНИЙ ЛЮКС</p>
     </div>
 
     <div class="tp-modal-title-price">
@@ -105,7 +105,7 @@
         <div class="tp-modal-input-field">
           <select id="price" name="tt-date" class="tt-modal-input">
             <option value="today" class="value" selected>
-              1000
+              1500
             </option>
           </select>
           <label for="price" class="tt-input-label-title">
