--- a/src/partials/hotel-page-section3.html
+++ b/src/partials/hotel-page-section3.html
@@ -82,7 +82,7 @@
       </div>
   
       <div class="tp-modal-title-wrap">
-        <p class="tp-modal-title">Двомісний люкс</p>
+        <p class="tp-modal-title">ДВОМІСНИЙ НОМЕР</p>
       </div>
   
       <div class="tp-modal-title-price">
@@ -105,7 +105,7 @@
           <div class="tp-modal-input-field">
             <select id="price" name="tt-date" class="tt-modal-input">
               <option value="today" class="value" selected>
-                1000
+                1200
               </option>
             </select>
             <label for="price" class="tt-input-label-title">
