--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -74,9 +74,9 @@
   padding-top: 32px;
 }
 
-.footer-soc-link {
+/* .footer-soc-link {
   color: #f3c653;
-}
+} */
 
 .footer-soc-text {
   font-family: 'Montserrat';
