--- a/src/partials/hotel-page-section2.html
+++ b/src/partials/hotel-page-section2.html
@@ -1,5 +1,5 @@
 <section class="section-three-room">
-  <div class="container-hotel-section2">
+  <div class="container-hotel-section2 class-overflow">
     <div class="container-one">
       <div class="div-pre-title">
         <h4 class="pre-title-three-room">Amet minim mollit non</h4>
