--- a/src/css/room-page-section.css
+++ b/src/css/room-page-section.css
@@ -40,7 +40,7 @@ body {background-color: #fffdee;}
   margin-left: auto;
   margin-top: 32px;
   margin-bottom: 20px;
-  width: 384px;
+  width: 100%;
   height: 64px;
   background: #000000;
   border: 1px solid #f3c653;
