--- a/src/css/hotel-page-setion2.css
+++ b/src/css/hotel-page-setion2.css
@@ -137,6 +137,8 @@
   padding: 14px 37px;
   outline: none;
   display: inline-block;
+  transition: background 500ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .three-room-btn:hover,
