--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -128,6 +128,8 @@ body {
     margin-right: auto;
     margin-top: 16px;
     margin-bottom: 0;
+    transition: background 500ms cubic-bezier(0.4, 0, 0.2, 1),
+            border 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-btn:hover,
