--- a/src/css/rest-page-hero.css
+++ b/src/css/rest-page-hero.css
@@ -88,8 +88,8 @@
 
   border: 1px solid rgba(243, 198, 83, 0.7);
   border-radius: 2px;
-
   color: #ffffff;
+  
 }
 
 .restpage-location-link:hover,
@@ -127,6 +127,8 @@
 
   color: #f3c653;
   background-color: rgba(0, 0, 0, 0.4);
+  transition: background 500ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .restpage-hero-button:hover,
