--- a/src/css/room-page-hero.css
+++ b/src/css/room-page-hero.css
@@ -109,6 +109,8 @@
 
   color: #f3c653;
   background-color: rgba(0, 0, 0, 0.4);
+  transition: background 500ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .roompage-hero-button:hover,
