--- a/src/partials/home-page-section1.html
+++ b/src/partials/home-page-section1.html
@@ -1,5 +1,5 @@
 <section class="homepage-section1">
-  <div class="container-section1 class-overflow">
+  <div class="container class-overflow">
     <div class="section1-top-wrap">
       <h2 class="section1-pre-title">Amet minim mollit non</h2>
       <h2 class="section1-logo">MIMIHO</h2>
