--- a/src/partials/home-page-section4.html
+++ b/src/partials/home-page-section4.html
@@ -1,5 +1,5 @@
 <section class="homepage-section4">
-  <div class="container-section4">
+  <div class="container">
     <h1 class="section4-logo">MIMIHO</h1>
     <h2 class="section4-post-title">Готель</h2>
     <p class="section4-description">
