--- a/src/partials/hotel-page-hero.html
+++ b/src/partials/hotel-page-hero.html
@@ -1,5 +1,5 @@
 <section class="hotelpage-hero-section">
-  <div class="hotelpage-container">
+  <div class="container">
     <h1 class="hotelpage-hero-title">MIMIHO</h1>
     <p class="hotelpage-post-title">Готель</p>
     <div class="hotelpage-hero-group">
