--- a/src/partials/rest-page-hero.html
+++ b/src/partials/rest-page-hero.html
@@ -1,5 +1,5 @@
 <section class="restpage-hero-section">
-  <div class="restpage-container">
+  <div class="container">
     <h1 class="restpage-hero-title">MIMIHO</h1>
     <p class="restpage-post-title">Ресторан</p>
     <h2 class="restpage-hero-subtitle">СМАК ЖИТТЯ 24/7</h2>
@@ -17,8 +17,15 @@
       </a>
 
       <div class="restpage-button-group">
-        <button type="button" class="restpage-hero-button" data-modal-open>Забронювати столик</button>
-        <button onclick="location.href='#menu-anhor'" class="restpage-hero-button">Переглянути меню</button>        
+        <button type="button" class="restpage-hero-button" data-modal-open>
+          Забронювати столик
+        </button>
+        <button
+          onclick="location.href='#menu-anhor'"
+          class="restpage-hero-button"
+        >
+          Переглянути меню
+        </button>
       </div>
     </div>
   </div>
