--- a/src/partials/room-page-header.html
+++ b/src/partials/room-page-header.html
@@ -1,5 +1,5 @@
 <header class="room-site-header">
-  <div class="room-header-container">
+  <div class="container">
     <a href="./index.html" class="header-logo">MIMIHO</a>
 
     <ul class="room-nav-list">
@@ -29,6 +29,7 @@
           href="https://www.instagram.com/"
           target="_blank"
           class="room-social-link"
+          aria-label="instagram link"
         >
           <svg class="room-social-icon" width="24" height="24">
             <use href="./img/icons-sprite.svg#icon-instagram-icon"></use>
@@ -40,6 +41,7 @@
           href="https://uk-ua.facebook.com/"
           target="_blank"
           class="room-social-link"
+          aria-label="facebook link"
         >
           <svg class="room-social-icon" width="24" height="24">
             <use href="./img/icons-sprite.svg#icon-facebook-icon"></use>
@@ -51,6 +53,7 @@
           href="https://web.telegram.org/z/"
           target="_blank"
           class="room-social-link"
+          aria-label="telegram link"
         >
           <svg class="room-social-icon" width="24" height="24">
             <use href="./img/icons-sprite.svg#icon-telegram-icon"></use>
