--- a/src/partials/room-page-hero.html
+++ b/src/partials/room-page-hero.html
@@ -1,5 +1,5 @@
 <section class="roompage-hero-section">
-  <div class="roompage-container">
+  <div class="container room">
     <h1 class="roompage-hero-title">ДВОМІСНИЙ НОМЕР люкс</h1>
     <p class="roompage-post-title">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
