--- a/src/partials/room-page-section1.html
+++ b/src/partials/room-page-section1.html
@@ -1,23 +1,23 @@
-<section class="doublelux dl-container">
-  <div class="dl-comfort ">
+<section class="doublelux container">
+  <div class="dl-comfort">
     <h2 class="dl-sec-heaher">ЗРУЧНОСТІ У НОМЕРІ</h2>
     <p class="dl-comfort-text">
-      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-      sint. Velit officia consequat duis enim velit mollit. Exercitation
-      veniam consequat sunt nostrud amet.
+      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+      Velit officia consequat duis enim velit mollit. Exercitation veniam
+      consequat sunt nostrud amet.
     </p>
     <div>
       <h3 class="dl-thirdheader">ЗАГАЛЬНІ</h3>
       <div class="dl-boxes">
         <p class="dl-maintext">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-          amet sint. Velit officia consequat duis enim velit mollit.
-          Exercitation veniam consequat sunt nostrud amet.
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
         </p>
         <p class="dl-maintext">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-          amet sint. Velit officia consequat duis enim velit mollit.
-          Exercitation veniam consequat sunt nostrud amet.
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
         </p>
       </div>
     </div>
@@ -25,14 +25,14 @@
       <h3 class="dl-thirdheader">ВАННА КІМНАТА</h3>
       <div class="dl-boxes">
         <p class="dl-maintext">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-          amet sint. Velit officia consequat duis enim velit mollit.
-          Exercitation veniam consequat sunt nostrud amet.
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
         </p>
         <p class="dl-maintext">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-          amet sint. Velit officia consequat duis enim velit mollit.
-          Exercitation veniam consequat sunt nostrud amet.
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
         </p>
       </div>
     </div>
@@ -40,8 +40,8 @@
       <h3 class="dl-thirdheader">СПАЛЬНЯ</h3>
       <div class="dl-boxes">
         <p class="dl-maintext">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-          amet sint.
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint.
         </p>
       </div>
     </div>
@@ -49,12 +49,12 @@
       <h3 class="dl-thirdheader">КУХНЯ</h3>
       <div class="dl-boxes">
         <p class="dl-maintext">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-          amet sint.
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint.
         </p>
         <p class="dl-maintext">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-          amet sint.
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint.
         </p>
       </div>
     </div>
@@ -62,20 +62,24 @@
       <h3 class="dl-thirdheader">МЕДІА</h3>
       <div class="dl-boxes">
         <p class="dl-maintext">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-          amet sint. Velit officia consequat duis enim velit mollit.
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit.
         </p>
       </div>
     </div>
   </div>
   <!-- <div class="dl-order-wrapper"> -->
-    <button type="button" class="dl-roomorder-btn" data-room-open>
-      ОФОРМИТИ БРОНЮВАННЯ
-    </button>
-    <a class="link dl-back-link" href="./hotel.html">Повернутися до перегляду номерів
-      <svg class="last-link">
-        <use href="./img/icons-sprite.svg#icon-arrow-disabled-rigth" class="arrow-disabled"></use>
-      </svg>
-    </a>
+  <button type="button" class="dl-roomorder-btn" data-room-open>
+    ОФОРМИТИ БРОНЮВАННЯ
+  </button>
+  <a class="link dl-back-link" href="./hotel.html"
+    >Повернутися до перегляду номерів
+    <svg class="last-link">
+      <use
+        href="./img/icons-sprite.svg#icon-arrow-disabled-rigth"
+        class="arrow-disabled"
+      ></use>
+    </svg>
+  </a>
   <!-- </div> -->
 </section>
