--- a/src/css/home-page-header.css
+++ b/src/css/home-page-header.css
@@ -1,13 +1,6 @@
-
 @font-face {
   font-family: 'Film P3';
   src: url(../fonts-filmp3/FilmP3Bold.woff2) format(woff2);
-}
-
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
 }
 
 .site-header {
@@ -19,18 +12,10 @@
   z-index: 999;
 }
 
-.site-header-container {
-  position: relative;
-
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.site-header .site-header-container {
+.site-header .container {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .header-logo {
   display: inline-block;
@@ -40,7 +25,7 @@
   padding-top: 16px;
   padding-bottom: 16px;
 
-  font-family: "Film P3";
+  font-family: 'Film P3';
   font-size: 36px;
   line-height: 1.08;
   letter-spacing: 0.3em;
@@ -63,7 +48,7 @@
   padding-top: 16px;
   padding-bottom: 16px;
 
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-weight: 500;
   font-size: 16px;
   line-height: 1.25;
@@ -94,7 +79,6 @@
 .header-social-list {
   position: absolute;
   top: 698px;
-  
 
   display: flex;
   align-items: center;
@@ -112,12 +96,12 @@
 .header-social-icon {
   width: 24px;
   height: 24px;
-  fill:#f3c653;
+  fill: #f3c653;
 }
 
 .header-social-icon:hover,
 .header-social-icon:focus {
-  fill:antiquewhite;
+  fill: antiquewhite;
 }
 
 /* Mobile Adaptive */
@@ -150,10 +134,9 @@
     padding-top: 8px;
     padding-bottom: 8px;
   }
-
 }
 
-@media screen and (min-width:320px) and ( max-width:413px) {
+@media screen and (min-width: 320px) and (max-width: 413px) {
   .header-social-list {
     top: 678px;
   }
@@ -208,7 +191,7 @@
   .header-nav-tel {
     display: inline-block;
 
-    font-family: "Montserrat";
+    font-family: 'Montserrat';
     font-size: 14px;
     line-height: 1.21;
     letter-spacing: 0.02em;
