--- a/src/css/home-page-section2.css
+++ b/src/css/home-page-section2.css
@@ -1,4 +1,3 @@
-
 .homepage-section2 {
   width: 100vw;
   padding-top: 24px;
@@ -15,23 +14,13 @@
 }
 
 @media (min-device-pixel-ratio: 2),
-(-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
   .homepage-section2 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
       url(../img/section2-img/mobile-section2-bgimage@2x.jpg);
   }
-}
-
-.container-section2 {
-  position: relative;
-  width: 414px;
-
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .section2-logo {
@@ -170,17 +159,7 @@
   fill: #ffffff;
 }
 
-@media screen and (max-width: 413px) {
-  .container-section2 {
-    width: 100%;
-  }
-}
-
 @media screen and (min-width: 1024px) {
-  .container-section2 {
-    width: 960px;
-  }
-
   .homepage-section2 {
     padding-top: 48px;
     padding-bottom: 96px;
@@ -189,15 +168,17 @@
   }
 
   @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .homepage-section2 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+      background-image: linear-gradient(
+          rgba(0, 0, 0, 0.65),
+          rgba(0, 0, 0, 0.65)
+        ),
         url(../img/section2-img/tablet-section2-bgimage@2x.jpg);
     }
   }
-
 
   .section2-logo {
     position: relative;
@@ -269,21 +250,20 @@
 }
 
 @media screen and (min-width: 1280px) {
-  .container-section2 {
-    width: 1140px;
-  }
-
   .homepage-section2 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
       url(../img/section2-img/descktop-section2-bgimage.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .homepage-section2 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+      background-image: linear-gradient(
+          rgba(0, 0, 0, 0.65),
+          rgba(0, 0, 0, 0.65)
+        ),
         url(../img/section2-img/descktop-section2-bgimage@2x.jpg);
     }
   }
