--- a/src/css/home-page-section4.css
+++ b/src/css/home-page-section4.css
@@ -14,23 +14,13 @@
 }
 
 @media (min-device-pixel-ratio: 2),
-(-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
   .homepage-section4 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
       url(../img/section4-img/mobile-bgimage@2x.jpg);
   }
-}
-
-.container-section4 {
-  position: relative;
-  width: 414px;
-
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .section4-logo {
@@ -107,7 +97,7 @@
   color: #f3c653;
   background-color: rgba(0, 0, 0, 0.4);
   transition: background 500ms cubic-bezier(0.4, 0, 0.2, 1),
-      border 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .homepage-section4-btn:hover,
@@ -166,17 +156,7 @@
   fill: #ffffff;
 }
 
-@media screen and (max-width: 413px) {
-  .container-section4 {
-    width: 100%;
-  }
-}
-
 @media screen and (min-width: 1024px) {
-  .container-section4 {
-    width: 960px;
-  }
-
   .homepage-section4 {
     padding-top: 48px;
     padding-bottom: 96px;
@@ -185,15 +165,17 @@
   }
 
   @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .homepage-section4 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+      background-image: linear-gradient(
+          rgba(0, 0, 0, 0.65),
+          rgba(0, 0, 0, 0.65)
+        ),
         url(../img/section4-img/tablet-bgimage@2x.jpg);
     }
   }
-
 
   .section4-logo {
     position: relative;
@@ -273,28 +255,27 @@
 }
 
 @media screen and (min-width: 1280px) {
-  .container-section4 {
-    width: 1140px;
-  }
-
   .homepage-section2 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
       url(../img/section4-img/descktop-bgimage.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .homepage-section4 {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+      background-image: linear-gradient(
+          rgba(0, 0, 0, 0.65),
+          rgba(0, 0, 0, 0.65)
+        ),
         url(../img/section4-img/descktop-bgimage@2x.jpg);
     }
   }
 
   .section4-logo {
     left: 655px;
-    
+
     font-size: 64px;
     line-height: 1.08;
   }
