--- a/src/css/hotel-page-section1.css
+++ b/src/css/hotel-page-section1.css
@@ -1,19 +1,10 @@
-
 .hotelpage-section1 {
   padding-top: 32px;
   padding-bottom: 32px;
 
   background-color: #fffdee;
 }
-.container-hotelpage {
-  position: relative;
 
-  width: 414px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
 .hotelpage-top-wrap {
   margin-bottom: 32px;
 }
@@ -97,19 +88,19 @@
   line-height: 1.25;
   letter-spacing: 0.02em;
   border: 2px solid rgba(255, 253, 238, 1);
-    border-radius: 25px;
+  border-radius: 25px;
 
   color: #f3c653;
   background-color: #000000;
   transition: background 500ms cubic-bezier(0.4, 0, 0.2, 1),
-      border 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hotelpage-btn:hover,
 .hotelpage-btn:focus,
 .hotelpage-btn:active {
   border: 2px solid rgba(243, 198, 83, 1);
-    background: #ffffff;
+  background: #ffffff;
 }
 
 .hotelpage-arrows {
@@ -132,17 +123,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 413px) {
-  .container-hotelpage {
-    width: 100%;
-  }
-}
-
 @media screen and (min-width: 1024px) {
-  .container-hotelpage {
-    width: 960px;
-  }
-
   .hotelpage-section1 {
     padding-top: 62px;
     padding-bottom: 145px;
@@ -211,10 +192,6 @@
 }
 
 @media screen and (min-width: 1280px) {
-  .container-hotelpage {
-    width: 1114px;
-  }
-
   .hotelpage-section1 {
     padding-top: 72px;
     padding-bottom: 182px;
@@ -224,7 +201,7 @@
     font-size: 36px;
     line-height: 1.4;
   }
-  
+
   .hotel-post-title {
     width: 400px;
     padding-bottom: 188px;
@@ -247,7 +224,8 @@
     height: 254px;
   }
 
-  .hotel-foto2, .hotel-foto3 {
+  .hotel-foto2,
+  .hotel-foto3 {
     width: 254px;
     height: 254px;
   }
