--- a/src/css/rest-section1.css
+++ b/src/css/rest-section1.css
@@ -1,20 +1,7 @@
-body {
-  overflow-x: hidden;
-}
-
 .rest-page-section1 {
-  background-color: #FFFDEE;
+  background-color: #fffdee;
   padding-top: 16px;
   padding-bottom: 20px;
-}
-
-.rest-page-container {
-  width: 414px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  overflow-x: hidden;
 }
 
 .rest-page-title {
@@ -22,7 +9,7 @@ body {
   font-weight: 400;
   font-size: 20px;
   line-height: 1.15;
-  color: #B4B4B4;
+  color: #b4b4b4;
   margin-bottom: 12px;
 }
 
@@ -43,7 +30,7 @@ body {
   font-size: 12px;
   line-height: 1.25;
   letter-spacing: 0.02em;
-  color: #7A7A7A;
+  color: #7a7a7a;
   margin-bottom: 28px;
 }
 
@@ -53,7 +40,7 @@ body {
   font-size: 12px;
   line-height: 1.25;
   letter-spacing: 0.02em;
-  color: #C79002;
+  color: #c79002;
 }
 
 .rest-page-img2 {
@@ -110,23 +97,7 @@ body {
   border-radius: 2px;
 }
 
-@media screen and (max-width: 413px) {
-  .rest-page-container {
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 414px) {
-  .rest-page-container {
-    width: 414px;
-  }
-}
-
 @media screen and (min-width: 1024px) {
-  .rest-page-container {
-    width: 960px;
-  }
-
   .rest-page-section1 {
     position: relative;
     padding-top: 120px;
@@ -198,10 +169,6 @@ body {
 }
 
 @media screen and (min-width: 1280px) {
-  .rest-page-container {
-    width: 1140px;
-  }
-
   .rest-page-title {
     font-size: 32px;
     line-height: 1.15;
