--- a/src/css/room-page-header.css
+++ b/src/css/room-page-header.css
@@ -3,12 +3,6 @@
   src: url(../fonts-filmp3/FilmP3Bold.woff2) format(woff2);
 }
 
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-}
-
 .room-site-header {
   position: absolute;
   left: 50%;
@@ -27,16 +21,7 @@
   );
 }
 
-.room-header-container {
-  position: relative;
-
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.room-site-header .room-header-container {
+.room-site-header .container {
   display: flex;
   align-items: center;
 }
@@ -129,10 +114,6 @@
 
 /* Mobile Adaptive */
 @media screen and (max-width: 413px) {
-  .room-header-container {
-    width: 100%;
-  }
-
   .header-logo {
     margin-right: auto;
   }
@@ -163,19 +144,9 @@
   }
 }
 
-@media screen and (min-width: 414px) {
-  .room-header-container {
-    width: 414px;
-  }
-}
-
 /* Tablet Adaptive */
 
 @media screen and (min-width: 1024px) {
-  .room-header-container {
-    width: 960px;
-  }
-
   .header-logo {
     width: 127px;
     margin-right: 205px;
@@ -231,10 +202,6 @@
 /* Desktop Adaptive */
 
 @media screen and (min-width: 1280px) {
-  .room-header-container {
-    width: 1140px;
-  }
-
   .header-logo {
     margin-right: 133px;
   }
