--- a/src/css/room-page-hero.css
+++ b/src/css/room-page-hero.css
@@ -20,15 +20,6 @@
   }
 }
 
-.roompage-container {
-  width: 414px;
-
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .roompage-hero-title {
   width: 325px;
   margin-bottom: 14px;
@@ -110,7 +101,7 @@
   color: #f3c653;
   background-color: rgba(0, 0, 0, 0.4);
   transition: background 500ms cubic-bezier(0.4, 0, 0.2, 1),
-      border 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .roompage-hero-button:hover,
@@ -124,6 +115,9 @@
   position: absolute;
   bottom: 50%;
   left: 50%;
+
+  padding-left: 15px;
+  padding-right: 15px;
 
   display: flex;
   justify-content: space-between;
@@ -155,7 +149,7 @@
 /* Mobile Adaptive */
 
 @media screen and (max-width: 413px) {
-  .roompage-container {
+  .room-arrow-buttons {
     width: 100%;
   }
 
@@ -169,6 +163,12 @@
     width: 240px;
     font-size: 12px;
     line-height: 1.25;
+  }
+}
+
+@media screen and (min-width: 414px) {
+  .room-arrow-buttons {
+    width: 414px;
   }
 }
 
@@ -190,7 +190,7 @@
     }
   }
 
-  .roompage-container {
+  .room-arrow-buttons {
     width: 960px;
   }
 
@@ -255,10 +255,9 @@
     }
   }
 
-  .roompage-container {
+  .room-arrow-buttons {
     width: 1140px;
   }
-
   .roompage-post-title {
     margin-bottom: 0;
   }
