--- a/src/css/room-page-section.css
+++ b/src/css/room-page-section.css
@@ -1,19 +1,9 @@
-body {background-color: #fffdee;}
-
-.dl-container {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-  line-height: 1.22;
-  letter-spacing: 0.014em;
-  color: #7a7a7a;
-  
-
-  width: 100%;
-  margin: 0 auto;
+body {
+  background-color: #fffdee;
 }
 
 .dl-sec-heaher {
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
   font-weight: 400;
   font-size: 32px;
   line-height: 1.5;
@@ -22,7 +12,7 @@ body {background-color: #fffdee;}
 
 .dl-thirdheader {
   margin-top: 32px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.15;
@@ -45,14 +35,14 @@ body {background-color: #fffdee;}
   background: #000000;
   border: 1px solid #f3c653;
   border-radius: 25px;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   color: #ffffff;
   transition: background 500ms cubic-bezier(0.4, 0, 0.2, 1),
-      color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .dl-roomorder-btn:hover,
@@ -66,23 +56,23 @@ body {background-color: #fffdee;}
   align-items: center;
   justify-content: end;
   padding-bottom: 48px;
-  
-  font-family: "Montserrat";
+
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.02em;
   color: #c79002;
-  fill: #C79002;
+  fill: #c79002;
   transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1),
-      fill 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .dl-back-link:hover,
 .dl-back-link:focus {
   color: #f3c653;
-  fill: #F3C653;
+  fill: #f3c653;
 }
 
 .last-link {
@@ -99,12 +89,6 @@ body {background-color: #fffdee;}
 
 /*Double lux Mobile*/
 @media screen and (max-width: 1023px) {
-  .dl-container {
-    max-width: 414px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-
   .doublelux {
     align-items: center;
     display: flex;
@@ -132,12 +116,6 @@ body {background-color: #fffdee;}
 
 /*Double lux Tablet*/
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .dl-container {
-    width: 1024px;
-    padding-left: 47px;
-    padding-right: 47px;
-  }
-
   .dl-sec-heaher {
     margin-top: 50px;
   }
