--- a/src/css/room.css
+++ b/src/css/room.css
@@ -1,6 +1,7 @@
-@import url("./room-page-header.css");
-@import url("./room-page-hero.css");
-@import url("./room-page-section.css");
-@import url("./footer.css");
+@import url('./main.css');
+@import url('./room-page-header.css');
+@import url('./room-page-hero.css');
+@import url('./room-page-section.css');
+@import url('./footer.css');
 
-@import url("./modal-table.css");
+@import url('./modal-table.css');
