--- a/src/partials/home-page-section2.html
+++ b/src/partials/home-page-section2.html
@@ -1,6 +1,5 @@
-
 <section class="homepage-section2">
-  <div class="container-section2">
+  <div class="container">
     <h1 class="section2-logo">MIMIHO</h1>
     <h2 class="section2-post-title">Ресторан</h2>
     <p class="section2-description">
@@ -10,9 +9,13 @@
 
     <div class="section2-wrap">
       <div class="section2-btn-group">
-        <button type="button" class="homepage-section2-btn" data-modal-open-two>Забронювати столик</button>
-        <form action="https://vitalik1788.github.io/teamProject-group14/restaurant.html">
-        <button class="homepage-section2-btn">Переглянути меню</button>
+        <button type="button" class="homepage-section2-btn" data-modal-open-two>
+          Забронювати столик
+        </button>
+        <form
+          action="https://vitalik1788.github.io/teamProject-group14/restaurant.html"
+        >
+          <button class="homepage-section2-btn">Переглянути меню</button>
         </form>
       </div>
 
@@ -57,17 +60,15 @@
       <button type="button" class="slider-section2-btn">
         <svg class="section2-arrow-icon" width="32" height="32">
           <use href="./img/icons-sprite.svg#icon-rigth-arrow-slider"></use>
-
         </svg>
       </button>
     </div>
   </div>
 </section>
-                                             <!-- MODAL WINDOW -->
+<!-- MODAL WINDOW -->
 
 <div class="backdrop is-hidden" data-modal-two>
   <div class="tt-modal">
-
     <button type="button" class="modal-close" data-modal-close-two>
       <svg class="close-modal-icon" width="24" height="24">
         <use href="./img/icons-sprite.svg#icon-cross-close-modal"></use>
@@ -75,25 +76,38 @@
     </button>
 
     <div class="tt-modal-title-wrap">
-      <h1 class="tt-modal-title">
-        ЗАБРОНЮВАТИ СТОЛИК
-      </h1>
+      <h1 class="tt-modal-title">ЗАБРОНЮВАТИ СТОЛИК</h1>
     </div>
 
     <form class="tt-modal-form">
-
       <div class="tt-input-wrap">
         <div class="tt-input-wrap-part">
           <div class="tt-modal-input-field">
-            <input type="text" class="tt-modal-input" name="name" id="name" required placeholder="Ваше ім’я"
-              pattern="^[a-zA-Z]+\s[a-zA-Z]+$" title="Username must be two words separated by space.">
+            <input
+              type="text"
+              class="tt-modal-input"
+              name="name"
+              id="name"
+              required
+              placeholder="Ваше ім’я"
+              pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
+              title="Username must be two words separated by space."
+            />
             <label for="name" class="tt-input-label-title">
               На кого забронювати столик?
             </label>
           </div>
           <div class="tt-modal-input-field">
-            <input type="tel" class="tt-modal-input" name="tel" id="tel" required placeholder="+38 (___) ___-__-__"
-              pattern="[0-9]+" title="please enter number only">
+            <input
+              type="tel"
+              class="tt-modal-input"
+              name="tel"
+              id="tel"
+              required
+              placeholder="+38 (___) ___-__-__"
+              pattern="[0-9]+"
+              title="please enter number only"
+            />
             <label for="tel" class="tt-input-label-title">
               Номер телефону
             </label>
@@ -114,9 +128,7 @@
           </div>
           <div class="tt-modal-input-field">
             <select id="tt-date" name="tt-date" class="tt-modal-input">
-              <option value="today" class="value" selected>
-                Сьогодні
-              </option>
+              <option value="today" class="value" selected>Сьогодні</option>
             </select>
             <label for="tt-date" class="tt-input-label-title">
               На яку дату бронювати?
@@ -124,10 +136,7 @@
           </div>
         </div>
       </div>
-      <button type="submit" class="tt-modal-button">
-        ОФОРМИТИ БРОНЮВАННЯ
-      </button>
-
+      <button type="submit" class="tt-modal-button">ОФОРМИТИ БРОНЮВАННЯ</button>
     </form>
   </div>
 </div>
